# name: TestSnapshotReporter.test_diff_lines[-0-SnapshotReporterNoContext]
  '
    ...
  - line 2
  + line 02
    ...
  - line 04
  + line 4
    ...
  '
---
# name: TestSnapshotReporter.test_diff_lines[-0-SnapshotReporter]
  '
    line 0
    line 1
  - line 2
  + line 02
    line 3
  - line 04
  + line 4
    line 5
    ...
    line 7
  '
---
# name: TestSnapshotReporter.test_diff_lines[-1-SnapshotReporterNoContext]
  '
    ...
  - line 3  
  + line 3	
    ...
  '
---
# name: TestSnapshotReporter.test_diff_lines[-1-SnapshotReporter]
  '
    line 0
    ...
    line 2
  - line 3  
  + line 3	
    line 4
    ...
    line 7
  '
---
